Add a "more information" button to About page
Added a new button for additional information about the creator.
Fixed minor structural issue within the code (line indentation)

--- a/about.html
+++ b/about.html
@@ -987,19 +987,23 @@
         </g>
       </svg>
 
-    </section>
-  </div>
-</section>
-<footer class="page-footer">
+    </div>
+  </section>
 
-  <p>Find Me On</p>
-  <div class="social-media">
-    <img src="img/github_icon.svg" alt="Github" role="menuitem">
-    <img src="img/twitter_icon.svg" alt="Twitter" role="menuitem">
-    <img src="img/linkedin_icon.svg" alt="LinkedIn" role="menuitem">
+  <div class="more-info">
+    <a href="#" class="button">More about Crue</a>
   </div>
-</footer>
 
-<script src="js/tota11y.min.js"></script>
+  <footer class="page-footer">
+
+    <p>Find Me On</p>
+    <div class="social-media">
+      <img src="img/github_icon.svg" alt="Github" role="menuitem">
+      <img src="img/twitter_icon.svg" alt="Twitter" role="menuitem">
+      <img src="img/linkedin_icon.svg" alt="LinkedIn" role="menuitem">
+    </div>
+  </footer>
+
+  <script src="js/tota11y.min.js"></script>
 </body>
 </html>
