Add a link to GitHub reciprocity page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <p>
       My name is Crue Jameson. I am a <span>web</span> designer from Colorado.
     </p>
-    <a href="#">Check out some of my code!</a>
+    <a href="https://github.com/Cruebee?tab=repositories">Check out some of my code!</a>
 
   </div>
 
