Update Contact Page with current Information

--- a/contact.html
+++ b/contact.html
@@ -60,19 +60,19 @@
 
   <div>
     <h1>Contact Info</h1>
-    CrubeeJ<br>
-    An Address.<br>
-    A zip Code With a State<br>
+    Crue Jameson<br>
+    2215 N. Overland Trl.<br>
+    80521<br>
     USA<br role="country">
     <br>
-    Tel:<a href="tel:+5556678989">Crue's Phone Number</a><br>
-    Skype:<a href="skype:myskypeneame">Crue's Skype</a><br>
-    e-mail:<a href="mailto:myemailadressATwhatever.com">Crue's Contact Email</a>
+    Tel:<a href="tel:+1-970-980-8519">Crue's Phone Number</a><br>
+    Skype:<a href="skype:cruebeedoobie">Crue's Skype</a><br>
+    e-mail:<a href="mailto:cruebeejameson@gmail.com">Crue's Contact Email</a>
   </div>
 
   <div>
-    <button href="mailto:myemailadressAtwhatever.com">Contact Crue</button>
-    <button class="button_secondary" href="mailto:email@email.com">Contact My Partner</button>
+    <button href="#">Photography by Crue</button>
+    <button class="button_secondary" href="#">My Partner's Projects</button>
   </div>
 
 <footer class="page-footer">
