--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 <footer class="page-footer">
 
   <p>Find Me On</p>
-  <div class="social-media">
+  <div role="menu" class="social-media">
     <img src="img/github_icon.svg" alt="Github" role="menuitem">
     <img src="img/twitter_icon.svg" alt="Twitter" role="menuitem">
     <img src="img/linkedin_icon.svg" alt="LinkedIn" role="menuitem">
