Update language declarations

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 
   <meta charset="utf-8"/>
@@ -37,8 +37,8 @@
 
   </header>
 
-    <form action="" method="post" id="contact-form"> <!-- A <form>'s default (method) is to post. a common action might look like: <form action="/login-form-action" method="post"></form> -->
-    <legend>Contact Me</legend>
+    <form action="#" method="post" id="contact-form"> <!-- A <form>'s default (method) is to post. a common action might look like: <form action="/login-form-action" method="post"></form> -->
+    <h1>Contact Me</h1>
 
     <label class="standard-label" for="contact-email"><span class="required-field">*</span>E-mail: </label>
     <input type="email" id="contact-email" required placeholder="example@email.com"><br><!-- Note you can also use: type="text" which would be a plain text field. Some browsers and mobile devices may react differenty to more semantic type="" situations such as type="email" or type="tel" -->
@@ -63,7 +63,7 @@
     Crue Jameson<br>
     2215 N. Overland Trl.<br>
     80521<br>
-    USA<br role="country">
+    USA<br>
     <br>
     Tel:<a href="tel:+1-970-980-8519">Crue's Phone Number</a><br>
     Skype:<a href="skype:cruebeedoobie">Crue's Skype</a><br>
@@ -71,8 +71,8 @@
   </div>
 
   <div>
-    <button href="#">Photography by Crue</button>
-    <button class="button_secondary" href="#">My Partner's Projects</button>
+    <button>Photography by Crue</button>
+    <button class="button_secondary">My Partner's Projects</button>
   </div>
 
 <footer class="page-footer">
