--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About Crue</title>
@@ -8,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.production.css">
+
 </head>
 
 <body>
@@ -42,7 +45,7 @@
 
       <p>This page is about myself. These are some of the things I like to do:</p>
 
-      <ul role="bio-list" class="about-list">
+      <ul class="about-list">
         <li role="presentation">Coding</li>
         <li role="presentation">Archery</li>
         <li role="presentation">Bushcraft</li>
