--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div class="profile">
 
-    <img src="img/portrait.jpeg" class="profile__portrait rotate-picture" alt="A picture of the developer, Eric Gerlach">
+    <img src="img/crue_portrait.jpeg" class="profile__portrait rotate-picture" alt="A picture of the developer, Eric Gerlach">
 
     <h1>Hello World!</h1>
     <p>
@@ -53,10 +53,10 @@
   <footer class="page-footer">
 
     <p>Find Me On</p>
-    <div role="menu" class="social-media">
-      <img src="img/github_icon.svg" alt="Github" role="menuitem">
-      <img src="img/twitter_icon.svg" alt="Twitter" role="menuitem">
-      <img src="img/linkedin_icon.svg" alt="LinkedIn" role="menuitem">
+    <div class="social-media">
+      <a href="https://github.com/Cruebee" target="_blank"><img src="img/github_icon.svg" alt="Github"></a>
+      <a href="https://twitter.com/cruebee" target="_blank"><img src="img/twitter_icon.svg" alt="Twitter"></a>
+      <a href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/" target="_blank"><img src="img/linkedin_icon.svg" alt="LinkedIn"></a>
     </div>
   </footer>
 
