Add useable links to social media images on all pages.

--- a/contact.html
+++ b/contact.html
@@ -78,10 +78,10 @@
 <footer class="page-footer">
 
   <p>Find Me On</p>
-  <div role="menu" class="social-media">
-    <img src="img/github_icon.svg" alt="Github" role="menuitem">
-    <img src="img/twitter_icon.svg" alt="Twitter" role="menuitem">
-    <img src="img/linkedin_icon.svg" alt="LinkedIn" role="menuitem">
+  <div class="social-media">
+    <a href="https://github.com/Cruebee" target="_blank"><img src="img/github_icon.svg" alt="Github"></a>
+    <a href="https://twitter.com/cruebee" target="_blank"><img src="img/twitter_icon.svg" alt="Twitter"></a>
+    <a href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/" target="_blank"><img src="img/linkedin_icon.svg" alt="LinkedIn"></a>
   </div>
 </footer>
 
