--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,8 @@
   </div>
 
   <div>
-    <button>Photography by Crue</button>
-    <button class="button_secondary">My Partner's Projects</button>
+    <a href="https://www.instagram.com/cruebeedoobie/" class="button" download>Pictures by Crue</a>
+    <a href="#" class="button_secondary">My Partner's Projects</a>
   </div>
 
 <footer class="page-footer">
@@ -82,6 +82,7 @@
     <a href="https://github.com/Cruebee" target="_blank"><img src="img/github_icon.svg" alt="Github"></a>
     <a href="https://twitter.com/cruebee" target="_blank"><img src="img/twitter_icon.svg" alt="Twitter"></a>
     <a href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/" target="_blank"><img src="img/linkedin_icon.svg" alt="LinkedIn"></a>
+    <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"><img src="img/instagram_icon.svg" alt="Instagram"></a>
   </div>
 </footer>
 
