Add padding to content on Contact page

--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
 
   </header>
 
+<div class="contact_menu">
     <form action="#" method="post" id="contact-form"> <!-- A <form>'s default (method) is to post. a common action might look like: <form action="/login-form-action" method="post"></form> -->
     <h1>Contact Me</h1>
 
@@ -74,7 +75,7 @@
     <a href="https://www.instagram.com/cruebeedoobie/" class="button" download>Pictures by Crue</a>
     <a href="#" class="button_secondary">My Partner's Projects</a>
   </div>
-
+</div>
 <footer class="page-footer">
 
   <p>Find Me On</p>
