update website pages to open within the same tab when clicking on contact page, add cv to files folder and link to site.

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
           <a href="work.html" role="menuitem" target="_self" class="navigation-list__item">Crue's Projects</a>
         </li>
         <li class="navtab" role="presentation">
-          <a href="contact.html" role="menuitem" target="_blank" class="navigation-list__item">Contact Crue</a>
+          <a href="contact.html" role="menuitem" target="_self" class="navigation-list__item">Contact Crue</a>
         </li>
       </ul>
     </nav>
@@ -52,7 +52,7 @@
         <li role="presentation">Hiking</li>
         <li role="presentation">Camping</li>
       </ul>
-      <a href="files/cv.pdf" class="button" download>Download my CV</a>
+      <a href="files/my_cv.pdf" class="button" download>Download my CV</a>
     </div>
 
     <div>
