--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="work.html" role="menuitem" target="_self" class="navigation-list__item">Crue's Projects</a>
         </li>
         <li role="presentation">
-          <a href="contact.html" role="menuitem" target="_blank" class="navigation-list__item">Contact Crue</a>
+          <a href="contact.html" role="menuitem" target="_self" class="navigation-list__item">Contact Crue</a>
         </li>
       </ul>
     </nav>
