change target name for cv so the button functions

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <li role="presentation">Hiking</li>
         <li role="presentation">Camping</li>
       </ul>
-      <a href="files/my_cv.pdf" class="button" download>Download my CV</a>
+      <a href="files/cv.pdf" class="button" download>Download my CV</a>
     </div>
 
     <div>
