create more contrast friendly buttons and links

--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
   </div>
 
   <div class="contact-buttons">
-    <a href="https://www.instagram.com/cruebeedoobie/" class="button" download>Check out my Instagram</a>
+    <a href="https://www.instagram.com/cruebeedoobie/" class="button">Check out my Instagram</a>
     <a href="#" class="button_secondary">My Partner's Projects</a>
   </div>
 </div>
