--- a/about.html
+++ b/about.html
@@ -437,6 +437,6 @@
     </div>
   </footer>
 
-  <script src="js/tota11y.min.js"></script>
+  <script src="src/js/tota11y.min.js"></script>
 </body>
 </html>
