--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
     </div>
   </footer>
 
-  <script src="js/tota11y.min.js"></script>
+  <script src="src/js/tota11y.min.js"></script>
 </body>
 </html>
