--- a/work.html
+++ b/work.html
@@ -44,32 +44,32 @@
       <div class="grid__item">
         <h2>Arrow Spine Calculator</h2>
         <p>I have been developing a mobile web app to help people learning about archery, find which spine they need to use for their arrows.</p>
-        <a href="#">Check out my project!</a>
+        <a href="#">Project coming soon!</a>
       </div>
       <div class="grid__item">
         <h2>Accuracy Tracker</h2>
         <p>Another project I have been working on heavily is the accuracy tracker. This is a mobile web app I am working on to help archers keep track of their scores in shooting rounds.</p>
-        <a href="#">Check out the tracker!</a>
+        <a href="#">Project on its way!</a>
       </div>
       <div class="grid__item">
         <h2>Fletch Specs</h2>
         <p>Archers are constantly facing issues of accuracy. Sometimes it can be hard to tell if there is an issue with equipment, or if there is an issue with the archer. The archer will be able to input an arrow type and the accuracy of the hit and track these records for their own use.
-          <a href="#">Check out the arrow tracker!</a>
+          <a href="#">Project in the works!</a>
         </div>
         <div class="grid__item">
           <h2>JavaScript</h2>
           <p>My experience with JavaScript and some of my favorite projects that are JavaScript heavy.</p>
-          <a href="#">See my JavaScript</a>
+          <a href="https://cruebee.github.io/jQuery-poke-tracker/">See my JavaScript</a>
         </div>
         <div class="grid__item">
           <h2>HTML</h2>
           <p>Here is some of my favorite HTML work!</p>
-          <a href="#">My HTML Projects</a>
+          <a href="https://github.com/Cruebee/jQuery-poke-tracker/blob/master/index.html">My HTML Projects</a>
         </div>
         <div class="grid__item">
           <h2>Travel Board</h2>
           <p>My partner and I love to travel! I wanted us to be able to track and share all of the things that we do while we are on vacation, so we can help our friends achieve their dream vacation goals!
-            <a href="#">Check out the Vacation Planner!</a>
+            <a href="#">Project on the way!</a>
           </div>
         </div>
       </section>
