update portfolio to reflect new projects

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
 
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Crue Jameson - Portfolio</title>
   <!-- Is the following code the most effective way to add in a favicon downloaded from the internet? -->
   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="dist/css/style.production.css">
 
@@ -18,11 +19,13 @@
 
   <header class="page-header">
 
-    <img  src="img/crue_jameson_logo.svg" alt="Crue Jameson" class="page-header__item">
+    <img src="img/crue_jameson_logo.svg" alt="Crue Jameson" class="page-header__item">
     <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
-          <a href="index.html" role="menuitem" target="_self" class="navigation-list__item navigation-list__item--active">Home</a> <!-- This is BEM naming convention. (Block Element Modifier). -->
+          <a href="index.html" role="menuitem" target="_self"
+            class="navigation-list__item navigation-list__item--active">Home</a>
+          <!-- This is BEM naming convention. (Block Element Modifier). -->
         </li>
         <li role="presentation">
           <a href="about.html" role="menuitem" target="_self" class="navigation-list__item">About Crue</a>
@@ -40,13 +43,14 @@
 
   <div class="profile">
 
-    <img src="img/crue_portrait.jpeg" class="profile__portrait rotate-picture" alt="A picture of the developer, Eric Gerlach">
+    <img src="img/crue_portrait.jpeg" class="profile__portrait rotate-picture"
+      alt="A picture of the developer, Eric Gerlach">
 
     <h1>Hello World!</h1>
     <p>
       My name is Crue Jameson. I am a <span>web</span> designer from Colorado.
     </p>
-    <a href="https://github.com/Cruebee?tab=repositories">Check out some of my code!</a>
+    <a href="https://github.com/Cruebee?tab=repositories" target="_blank">Check out some of my code!</a>
 
   </div>
 
@@ -56,11 +60,14 @@
     <div class="social-media">
       <a href="https://github.com/Cruebee" target="_blank"><img src="img/github_icon.svg" alt="Github"></a>
       <a href="https://twitter.com/cruebee" target="_blank"><img src="img/twitter_icon.svg" alt="Twitter"></a>
-      <a href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/" target="_blank"><img src="img/linkedin_icon.svg" alt="LinkedIn"></a>
-      <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"><img src="img/instagram_icon.svg" alt="Instagram"></a>
+      <a href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/" target="_blank"><img src="img/linkedin_icon.svg"
+          alt="LinkedIn"></a>
+      <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"><img src="img/instagram_icon.svg"
+          alt="Instagram"></a>
     </div>
   </footer>
 
   <script src="src/js/tota11y.min.js"></script>
 </body>
+
 </html>
