finish linking meetemup

--- a/work.html
+++ b/work.html
@@ -62,9 +62,9 @@
         <a href="memberberry.html">You member right?</a>
       </div>
       <div class="grid__item">
-        <h2>JavaScript</h2>
-        <p>My experience with JavaScript and some of my favorite projects that are JavaScript heavy.</p>
-        <a href="https://cruebee.github.io/jQuery-poke-tracker/">See my JavaScript</a>
+        <h2>meetemup</h2>
+        <p>Check out the meetemup app.</p>
+        <a href="meetemup.html">meetemup app</a>
       </div>
       <div class="grid__item">
         <h2>HTML</h2>
