--- a/meetemup.html
+++ b/meetemup.html
@@ -48,7 +48,7 @@
       <a href="https://github.com/Cruebee/meetemup" target="_blank"
         aria-label="Check out the code for the meetemup app">Github</a>
     </p>
-    <img class="app-image" src="img/memberberry-image.jpeg" alt="Memberberry app screenshot" />
+    <img class="app-image" src="img/meetemup.png" alt="Memberberry app screenshot" />
     <div class="grid">
       <div class="grid__item">
         <h2>Objective</h2>
