--- a/meetemup.html
+++ b/meetemup.html
@@ -74,7 +74,7 @@
       </div>
     </div>
   </main>
-<footer>
+<footer class="page-footer">
   <p>Find Me On</p>
   <div class="social-media">
     <a href="https://github.com/Cruebee" target="_blank"><img src="img/github_icon.svg" alt="Github"></a>
@@ -85,5 +85,6 @@
         alt="Instagram"></a>
   </div>
 </footer>
+<script src="src/js/tota11y.min.js"></script>
 </body>
 </html>
