--- a/meetemup.html
+++ b/meetemup.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Crue's Projects</title>
+  <title>meetemup</title>
   <!-- Is the following code the most effective way to add in a favicon downloaded from the internet? -->
   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
   <link rel="stylesheet" type="text/css"
@@ -41,7 +41,7 @@
 
   </header>
   <main class="main-content">
-    <h1>Memberberry</h1>
+    <h1>meetemup</h1>
     <p>
       <a href="https://cruebee.github.io/meetemup/" target="_blank" aria-label="Check out the meetemup app">Check
         out the meetemup app</a> |
